--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -4,6 +4,7 @@ $body-background-color: #E6E6E6;
 $primary: #3C735F;
 $link: $primary;
 $navbar-height: 3.5rem;
+$navbar-item-hover-background-color: $body-background-color;
 
 @import "../../node_modules/bulma/bulma.sass";
 
