chore: increase min height

--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -9,7 +9,7 @@ $navbar-item-hover-background-color: $body-background-color;
 @import "../../node_modules/bulma/bulma.sass";
 
 main {
-  min-height: 20rem;
+  min-height: 100vh;
 }
 
 .navbar-brand {
