--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -1,6 +1,6 @@
 @charset "utf-8";
 
-$body-background-color: #E6E6E6;
+$body-background-color: #F1F1F1;
 $primary: #3C735F;
 $link: $primary;
 $navbar-height: 3.8rem;
