--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -4,6 +4,7 @@ $body-background-color: #EEE;
 $primary: #3C735F;
 $link: $primary;
 $info: #4687C8;
+$danger: #E60000;
 $navbar-height: 3.8rem;
 $navbar-item-hover-background-color: $body-background-color;
 
@@ -15,6 +16,7 @@ main {
 
 footer {
   padding: 10rem 0;
+  border-top: 4px solid $danger;
 }
 
 .navbar-brand {
