chore: add body background to page modal

--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -34,3 +34,7 @@ footer {
 .card-image img {
   background-color: $light-invert;
 }
+
+.has-background-body {
+  background-color: $body-background-color;
+}
