fix: replace hero body by section

--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -8,6 +8,7 @@ $danger: #E60000;
 $navbar-height: 3.8rem;
 $navbar-item-hover-background-color: $body-background-color;
 $section-padding: 2.5rem 1rem;
+$section-padding-medium: 7.5rem 1rem;
 
 @import "~bulma/bulma.sass";
 
