feat: add feature descriptions

--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -7,25 +7,17 @@ $info: #4687C8;
 $danger: #E60000;
 $navbar-height: 3.8rem;
 $navbar-item-hover-background-color: $body-background-color;
-$section-padding: 2.5rem 1rem;
+$section-padding: 2rem 1rem;
 $section-padding-medium: 7.5rem 1rem;
+$footer-background-color: #eee;
 
 @import "~bulma/bulma.sass";
-
-footer {
-  padding: 10rem 0;
-  border-top: 4px solid $danger;
-}
 
 .navbar-brand .navbar-item {
   background-color: inherit !important;
 }
 
-.navbar-end .button {
-  font-size: 18px;
-}
-
-.card-image img {
+.image img {
   background-color: $light-invert;
   object-fit: cover;
 }
