--- a/src/app/app-theme.scss
+++ b/src/app/app-theme.scss
@@ -9,6 +9,7 @@ $navbar-height: 3.8rem;
 $navbar-item-hover-background-color: $body-background-color;
 $section-padding: 2rem 1rem;
 $section-padding-medium: 7.5rem 1rem;
+$notification-padding-ltr: 1rem 2rem;
 $footer-background-color: #EEE;
 
 @import "~bulma/bulma.sass";
